Documentation and wrap up