@@ -159,6 +159,9 @@
                 <configuration>
                     <createDependencyReducedPom>true</createDependencyReducedPom>
                     <transformers>
+                        <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                            <resource>reference.conf</resource>
+                        </transformer>
                         <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                         <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                             <mainClass>${mainClass}</mainClass>
@@ -269,7 +272,7 @@
                                     <name>tes</name>
                                     <build>
                                         <from>openjdk:11-jre</from>
-                                        <cmd>java -jar /app/${project.artifactId}-${project.version}.jar server /app/config.yml</cmd>
+                                        <cmd>java --illegal-access=permit -jar /app/${project.artifactId}-${project.version}.jar server /app/config.yml</cmd>
                                         <assembly>
                                             <basedir>/app</basedir>
                                             <inline>
